# starter

./: cookiecutter_rakenne.md  package-lock.json  wibecoding.md
cookiecutter-template/: LEARNINGS.md  PROJECT_DESCRIPTION.md  README.md  cookiecutter.json  package-lock.json
cookiecutter-template/hooks/: post_gen_project.py
cookiecutter-template/{{ cookiecutter.project_slug }}/: .gitignore  POST_SETUP_COMMANDS.md  README.md  docusaurus.config.js  pyproject.toml  requirements.txt  sidebars.js
cookiecutter-template/{{ cookiecutter.project_slug }}/.github/workflows/: deploy-docs.yml  sync-docs-to-central.yml
cookiecutter-template/{{ cookiecutter.project_slug }}/config/: .env.example  docusaurus.config.js  sidebars.js
cookiecutter-template/{{ cookiecutter.project_slug }}/docs/: PRD.md  architecture.md  loppuyhtenveto.md  projektinblueprint.md  video_demo_material.md  vision.md
